<resources>
    <string name="app_name">Number guess</string>
    <string name="guess">In this game user need to find system generated number by making guesses.</string>
    <string name="play">Start game</string>
    <string name="number_guess">Number guess</string>
    <string name="score_board">Score board</string>
    <string name="exit_app">Exit app</string>
    <string name="select_level">Select level</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="level_7">Level 7</string>
    <string name="level_8">Level 8</string>
    <string name="shared_preference">Shared Preference</string>
    <string name="instruction">Instruction</string>
    <string name="ins">rhvh</string>
    <string name="guide1">In this game, the user has to guess number and find system generated number.</string>
    <string name="guide2">Everytime it match your entered number with system generated number if number matched, then you win.</string>
    <string name="guide3">Otherwise it tell your guess was greater or less than system generated number.</string>
    <string name="app_id_adds">ca-app-pub-312345</string>
    <string name="banner_id">ca-app-pub-12345</string>
    <string name="interstitial_id">ca-app-pub-312345</string>
    <string name="guess_the_number_between_0_and">Guess the number between 0 and</string>
    <string name="space" />
    <string name="enter_number">Enter Number</string>
    <string name="dot">....</string>
    <string name="submit">Submit</string>
    <string name="total_guesses">Total Guesses</string>
    <string name="_0">0</string>
    <string name="loading">Loading......</string>
    <string name="levels">Levels</string>
    <string name="guesses">Guesses</string>
    <string name="level1">Level1</string>
    <string name="lvl1">0</string>
    <string name="level2">Level2</string>
    <string name="lvl2">0</string>
    <string name="level3">Level3</string>
    <string name="lvl3">0</string>
    <string name="level4">Level4</string>
    <string name="lvl4">0</string>
    <string name="level5">Level5</string>
    <string name="lvl5">0</string>
    <string name="level6">Level6</string>
    <string name="lvl6">0</string>
    <string name="level7">Level7</string>
    <string name="lvl7">0</string>
    <string name="level8">Level8</string>
    <string name="lvl8">0</string>
    <string name="_1000">1000</string>
</resources>