<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".main.ScoreActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:background="@drawable/num_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <TableLayout

        android:layout_below="@id/logo"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <TableRow
            android:background="#B3751B"

            >

            <TextView
                android:layout_margin="10dp"
                android:text="@string/levels"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="25sp"
                />

            <TextView
                android:text="@string/guesses"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="right"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:textSize="25sp"
                tools:ignore="RtlCompat,RtlHardcoded" />

    </TableRow>

        <TableRow
            android:background="#9E7D4C"
            >

            <TextView
                android:layout_margin="10dp"
                android:text="@string/level1"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="#A3855A"
                android:textColor="#ffffff"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/score1"
                android:text="@string/lvl1"
                android:textColor="#ffffff"
                android:gravity="right"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="#A3855A"
                android:layout_margin="10dp"
                android:textSize="20sp"
                tools:ignore="RtlCompat,RtlHardcoded" />

        </TableRow>

        <TableRow
            android:background="#9E7D4C"
            >

            <TextView
                android:layout_margin="10dp"
                android:text="@string/level2"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="#A3855A"
                android:textColor="#ffffff"
                android:textSize="18sp"
                />

            <TextView
                android:text="@string/lvl2"
                android:textColor="#ffffff"
                android:gravity="right"
                android:padding="5dp"
                android:id="@+id/score2"
                android:textAlignment="center"
                android:background="#A3855A"
                android:layout_margin="10dp"
                android:textSize="20sp"
                tools:ignore="RtlCompat,RtlHardcoded" />

        </TableRow>

        <TableRow
            android:background="#9E7D4C"
            >

            <TextView
                android:layout_margin="10dp"
                android:text="@string/level3"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="#A3855A"
                android:textColor="#ffffff"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/score3"
                android:text="@string/lvl3"
                android:textColor="#ffffff"
                android:gravity="right"
                android:textAlignment="center"
                android:padding="5dp"
                android:background="#A3855A"
                android:layout_margin="10dp"
                android:textSize="20sp"
                tools:ignore="RtlCompat,RtlHardcoded" />

        </TableRow>

        <TableRow
            android:background="#9E7D4C"
            >

            <TextView
                android:layout_margin="10dp"
                android:text="@string/level4"
                android:textAlignment="center"
                android:padding="5dp"
                android:background="#A3855A"
                android:textColor="#ffffff"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/score4"
                android:text="@string/lvl4"
                android:textColor="#ffffff"
                android:gravity="right"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="#A3855A"
                android:layout_margin="10dp"
                android:textSize="20sp"
                tools:ignore="RtlCompat,RtlHardcoded" />

        </TableRow>

        <TableRow
            android:background="#9E7D4C"
            >

            <TextView
                android:layout_margin="10dp"
                android:text="@string/level5"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="#A3855A"
                android:textColor="#ffffff"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/score5"
                android:text="@string/lvl5"
                android:textColor="#ffffff"
                android:gravity="right"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="#A3855A"
                android:layout_margin="10dp"
                android:textSize="20sp"
                tools:ignore="RtlCompat,RtlHardcoded" />

        </TableRow>

        <TableRow
            android:background="#9E7D4C"
            >

            <TextView
                android:layout_margin="10dp"
                android:text="@string/level6"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="#A3855A"
                android:textColor="#ffffff"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/score6"
                android:text="@string/lvl6"
                android:textColor="#ffffff"
                android:gravity="right"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="#A3855A"
                android:layout_margin="10dp"
                android:textSize="20sp"
                tools:ignore="RtlCompat,RtlHardcoded" />

        </TableRow>

        <TableRow
            android:background="#9E7D4C"
            >

            <TextView
                android:layout_margin="10dp"
                android:text="@string/level7"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="#A3855A"
                android:textColor="#ffffff"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/score7"
                android:text="@string/lvl7"
                android:textColor="#ffffff"
                android:gravity="right"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="#A3855A"
                android:layout_margin="10dp"
                android:textSize="20sp"
                tools:ignore="RtlCompat,RtlHardcoded" />

        </TableRow>

        <TableRow
            android:background="#9E7D4C"
            >

            <TextView
                android:layout_margin="10dp"
                android:text="@string/level8"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="#A3855A"
                android:textColor="#ffffff"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/score8"
                android:text="@string/lvl8"
                android:textColor="#ffffff"
                android:gravity="right"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="#A3855A"
                android:layout_margin="10dp"
                android:textSize="20sp"
                tools:ignore="RtlCompat,RtlHardcoded" />

        </TableRow>


    </TableLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>