<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/head"
    android:background="@drawable/gradient_background"
    tools:context=".main.LevelActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:background="@drawable/num_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_level"
            android:layout_below="@+id/logo"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:padding="5dp"
            android:textAlignment="center"
            android:id="@+id/title"
            />



    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <Button
                android:id="@+id/level1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/level_1"
                android:padding="5dp"
                android:layout_marginStart="65dp"
                android:background="@drawable/button_circle"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                />

            <Button
                android:id="@+id/level2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/level_2"
                android:padding="5dp"
                android:textAllCaps="false"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="65dp"
                android:background="@drawable/button_circle"
                android:textSize="18sp"
                android:textColor="#ffffff"
                />


        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <Button
                android:id="@+id/level3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/level_3"
                android:padding="5dp"
                android:textAllCaps="false"
                android:layout_marginStart="65dp"
                android:background="@drawable/button_circle"
                android:textSize="18sp"
                android:textColor="#ffffff"
                />

            <Button
                android:id="@+id/level4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/level_4"
                android:padding="5dp"
                android:textAllCaps="false"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_circle"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:layout_marginEnd="65dp"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <Button
                android:id="@+id/level5"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/level_5"
                android:padding="5dp"
                android:textAllCaps="false"
                android:layout_marginStart="65dp"
                android:background="@drawable/button_circle"
                android:textSize="18sp"
                android:textColor="#ffffff"
                />

            <Button
                android:id="@+id/level6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/level_6"
                android:padding="5dp"
                android:textAllCaps="false"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_circle"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:layout_marginEnd="65dp"
                />


        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <Button
                android:id="@+id/level7"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/level_7"
                android:padding="5dp"
                android:textAllCaps="false"
                android:layout_marginStart="65dp"
                android:background="@drawable/button_circle"
                android:textSize="18sp"
                android:textColor="#ffffff"
                />

            <Button
                android:id="@+id/level8"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/level_8"
                android:padding="5dp"
                android:textAllCaps="false"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_circle"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:layout_marginEnd="65dp"
                />


        </RelativeLayout>



    </LinearLayout>

        </RelativeLayout>

</ScrollView>



</RelativeLayout>