<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background"
    android:layout_height="match_parent"
    tools:context=".main.Instruction">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:background="@drawable/num_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:id="@+id/h"
        android:layout_below="@id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Instruction:-"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/h1"
        android:layout_below="@+id/h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_margin="30dp"
        android:text="@string/guide1"
        android:textColor="#040404"
        />

    <TextView
        android:id="@+id/h2"
        android:layout_below="@+id/h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_margin="30dp"
        android:text="@string/guide2"
        android:textColor="#040404"
        />

    <TextView
        android:id="@+id/h3"
        android:layout_below="@+id/h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_margin="30dp"
        android:text="@string/guide3"
        android:textColor="#040404"
        />

</RelativeLayout>