<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".level.Level1">


    <RelativeLayout
        android:id="@+id/main"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="90dp">

        <com.startapp.sdk.ads.banner.Banner
            android:id="@+id/startAppBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/head" >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_the_number_between_0_and"
            android:textStyle="bold"
            android:textColor="#9C27B0"
            android:textAlignment="center"
            android:textSize="20sp" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space"
        android:textStyle="bold"
        android:textColor="#9C27B0"
        android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:layout_below="@+id/head"
        android:id="@+id/line"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_marginStart="35dp"
        android:layout_marginTop="42dp"
        android:text="@string/enter_number"
        android:textColor="#020202"
        android:textSize="25sp"
        android:textStyle="bold"

        />


        <EditText
            android:id="@+id/enterNo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/line"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="47dp"
            android:background="@drawable/button_stroke"
            android:hint="@string/dot"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
        android:id="@+id/btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_stroke_submit"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/enterNo"
        />




    <TextView
        android:id="@+id/line2"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/btn"
        android:background="#ffffff" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_marginStart="65dp"
        android:layout_marginTop="32dp"
        android:text="@string/total_guesses"
        android:textColor="#020202"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/showGuess"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/btn"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:text="@string/_0"
        android:padding="10dp"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="104dp"
        android:background="@drawable/button_stroke" />




    <TextView
        android:id="@+id/line3"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/textView"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/showResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line3"
        android:text=""
        android:textColor="#F44336"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/line4"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/showResult"
        android:background="#ffffff" />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_below="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        >

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="horizontal"
                android:id="@+id/recyclerView"
                />

        </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    </RelativeLayout>

    </ScrollView>

</RelativeLayout>